@@ -23,11 +23,11 @@ import com.android.tools.idea.wearpairing.ConnectionState;
 import com.android.tools.idea.wearpairing.PairingDevice;
 import com.android.tools.idea.wearpairing.WearPairingManager;
 import com.android.tools.idea.wearpairing.WearPairingManager.PhoneWearPair;
-import com.intellij.openapi.Disposable;
-import java.util.Arrays;
-import java.util.Collections;
+import com.intellij.testFramework.DisposableRule;
+import java.util.List;
 import javax.swing.AbstractButton;
 import org.jetbrains.annotations.NotNull;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -35,6 +35,9 @@ import org.mockito.Mockito;
 
 @RunWith(JUnit4.class)
 public final class PairedDevicesPanelTest {
+  @Rule
+  public final DisposableRule myDisposableRule = new DisposableRule();
+
   private static final @NotNull Key PIXEL_4_API_31_KEY = TestVirtualDevices.newKey("Pixel_4_API_31");
 
   private final PairingDevice myPixel4Api31 = new PairingDevice(PIXEL_4_API_31_KEY.toString(),
@@ -60,10 +63,13 @@ public final class PairedDevicesPanelTest {
   @Test
   public void removeButtonDoesntThrowExceptionWhenSelectionIsEmpty() {
     // Arrange
-    Mockito.when(myManager.getPairsForDevice("Pixel_4_API_31"))
-      .thenReturn(Collections.singletonList(new PhoneWearPair(myPixel4Api31, myWearOsSmallRoundApi28)));
+    Mockito.when(myManager.getPairsForDevice(PIXEL_4_API_31_KEY.toString()))
+      .thenReturn(List.of(new PhoneWearPair(myPixel4Api31, myWearOsSmallRoundApi28)));
 
-    AbstractButton button = new PairedDevicesPanel(PIXEL_4_API_31_KEY, Mockito.mock(Disposable.class), null, myManager).getRemoveButton();
+    PairedDevicesPanel panel = new PairedDevicesPanel(PIXEL_4_API_31_KEY, myDisposableRule.getDisposable(), null, myManager);
+    panel.getTable().removeRowSelectionInterval(0, 0);
+
+    AbstractButton button = panel.getRemoveButton();
 
     // Act
     button.doClick();
@@ -73,10 +79,10 @@ public final class PairedDevicesPanelTest {
   public void reloadPairingsAdd() {
     // Arrange
     Mockito.when(myManager.getPairsForDevice(PIXEL_4_API_31_KEY.toString()))
-      .thenReturn(Collections.emptyList())
-      .thenReturn(Collections.singletonList(new PhoneWearPair(myPixel4Api31, myWearOsSmallRoundApi28)));
+      .thenReturn(List.of())
+      .thenReturn(List.of((new PhoneWearPair(myPixel4Api31, myWearOsSmallRoundApi28))));
 
-    PairedDevicesPanel panel = new PairedDevicesPanel(PIXEL_4_API_31_KEY, Mockito.mock(Disposable.class), null, myManager);
+    PairedDevicesPanel panel = new PairedDevicesPanel(PIXEL_4_API_31_KEY, myDisposableRule.getDisposable(), null, myManager);
 
     // Act
     panel.reloadPairings();
@@ -88,24 +94,25 @@ public final class PairedDevicesPanelTest {
       .setIcon(DeviceType.WEAR_OS.getVirtualIcon())
       .setName("Wear OS Small Round API 28")
       .setTarget("Android 9.0")
+      .setStatus(new Status("Unknown"))
       .setAndroidVersion(new AndroidVersion(28))
       .build();
 
-    assertEquals(Collections.singletonList(Arrays.asList(device, "Unknown")), TestTables.getData(panel.getTable()));
+    assertEquals(List.of((List.of(DeviceType.WEAR_OS, device, new Status("Unknown")))), TestTables.getData(panel.getTable()));
   }
 
   @Test
   public void reloadPairingsRemove() {
     Mockito.when(myManager.getPairsForDevice("Pixel_4_API_31"))
-      .thenReturn(Collections.singletonList(new PhoneWearPair(myPixel4Api31, myWearOsSmallRoundApi28)))
-      .thenReturn(Collections.emptyList());
+      .thenReturn(List.of(new PhoneWearPair(myPixel4Api31, myWearOsSmallRoundApi28)))
+      .thenReturn(List.of());
 
-    PairedDevicesPanel panel = new PairedDevicesPanel(PIXEL_4_API_31_KEY, Mockito.mock(Disposable.class), null, myManager);
+    PairedDevicesPanel panel = new PairedDevicesPanel(PIXEL_4_API_31_KEY, myDisposableRule.getDisposable(), null, myManager);
 
     // Act
     panel.reloadPairings();
 
     // Assert
-    assertEquals(Collections.emptyList(), TestTables.getData(panel.getTable()));
+    assertEquals(List.of(), TestTables.getData(panel.getTable()));
   }
 }
